# xbot_positioning

./: CMakeLists.txt
lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/config/: slam_toolbox_params.yaml
lidar_localization/launch/: lidar_slam.launch
lidar_localization/src/: cluster_tracker.cpp  cluster_tracker.h  lidar_slam_bridge_node.cpp  obstacle_tracker_node.cpp  scan_filter.cpp  scan_filter.h
lidar_localization/test/: test_cluster_tracker.cpp  test_scan_filter.cpp
src/: LidarOdometryMeasurementModel.hpp  xbot_positioning.cpp  xbot_positioning_core.cpp  xbot_positioning_core.h
